<resources>
    <string name="app_name">化工教材</string>
    <string name="text_more">更多</string>
    <string name="text_search_hint">书名、作者、内容简介</string>
    <string name="manager_search_hint">姓名、学校</string>
    <string name="text_bookcity_classfy">分类</string>
    <string name="home_table1">书架</string>
    <string name="home_table2">书城</string>
    <string name="home_table3">管理</string>
    <string name="home_table4">我的</string>
    <string name="my_bookshelf">我的书架</string>
    <string name="sort_time">时间</string>
    <string name="sort_book_name">书名</string>
    <string name="sort_name">姓名</string>
    <string name="str_edit">管理</string>
    <string name="str_edit_done">完成</string>
    <string name="str_check_all">全选</string>
    <string name="str_delete">删除</string>
    <string name="str_delete_fail">删除失败</string>
    <string name="bf_free_book">免费样书</string>
    <string name="bf_give_book">我的赠书</string>
    <string name="bf_buy_book">已购图书</string>
    <string name="bf_collect_book">我的收藏</string>
    <string name="bf_my_book">我的图书</string>
    <string name="no_more_data">没有更多数据了</string>
    <string name="click_look">点击查看</string>
    <string name="personal_information">个人信息</string>
    <string name="my_apply">我的申请</string>
    <string name="my_opinion">我的意见</string>
    <string name="personal_custom">个人定制</string>
    <string name="str_search">搜索</string>
    <string name="str_search_history">搜索历史</string>
    <string name="str_empty">清空</string>
    <string name="hot_search">热门搜索</string>
    <string name="search_result">搜索结果</string>
    <string name="search_hot">热度</string>
    <string name="edit_phone_number">绑定手机修改</string>
    <string name="version_update">版本更新</string>
    <string name="contact_us">联系我们</string>
    <string name="share_app">分享给好友</string>
    <string name="exit_logon">退出登录</string>
    <string name="setting">设置</string>
    <string name="country_area">国家和地区</string>
    <string name="telephone_number">中国大陆 + 86</string>
    <string name="modify_phone_tips_1">中国大陆 + 86</string>
    <string name="input_password">请输入登录密码</string>
    <string name="use_of_check">用于验证身份</string>
    <string name="login_password">登录密码</string>
    <string name="check_code">校验码</string>
    <string name="input_phone_number">请输入手机号</string>
    <string name="new_phone_number">新手机号</string>
    <string name="get_check_code">获取校验码</string>
    <string name="message_code">短信校验码</string>
    <string name="next_step">下一步</string>
    <string name="done">完成</string>
    <string name="modify_phone_title">修改手机号</string>
    <string name="change_password_login">切换至密码登录</string>
    <string name="change_phone_login">切换至手机登录</string>
    <string name="please_input_username">请输入用户名</string>
    <string name="please_input_password">请输入密码</string>
    <string name="please_input_checkcode">请输验证码</string>
    <string name="click_get">点击获取</string>
    <string name="login">登录</string>
    <string name="register_now">立即注册</string>
    <string name="register">注册</string>
    <string name="third_party_login">第三方登录</string>
    <string name="str_qq">QQ</string>
    <string name="str_wechat">微信</string>
    <string name="my_custom">我的定制</string>
    <string name="apply_watting">等待开通</string>
    <string name="apply_done">已开通</string>
    <string name="apply_unpass">未通过</string>
    <string name="reply_platform">回复</string>
    <string name="reply_from_platform">平台回复：</string>
    <string name="reply_from_me">我的回复：</string>
    <string name="send">发送</string>
    <string name="publish_opinion">发表意见</string>
    <string name="submit_opinion">意见提交</string>
    <string name="submit_letter">发送私信</string>
    <string name="publish_opinion_title">您有什么问题或者建议想对我们说？</string>
    <string name="publish_private_letter">请输入您要发送的私信</string>
    <string name="publish_opinion_hint">您的宝贵意见，就是我们进步的源泉</string>
    <string name="one_key_approve">一键审批</string>
    <string name="message_manage">消息管理</string>
    <string name="sample_book_manage">样书管理</string>
    <string name="user_manage">用户管理</string>
    <string name="opinion_manage">意见管理</string>
    <string name="sort_state">状态</string>
    <string name="approve_wait">未审核：</string>
    <string name="approve_fail">未通过：</string>
    <string name="approve_success">已经审批：</string>
    <string name="sample_book">样书：</string>
    <string name="give_book">赠书：</string>
    <string name="give_book1">赠书</string>
    <string name="private_letter">私信</string>
    <string name="blacklist">加入黑名单</string>
    <string name="remove_blacklist">移出黑名单</string>
    <string name="approval">审批</string>
    <string name="reason">原因</string>
    <string name="news">消息</string>
    <string name="give_opinion">提点意见</string>
    <string name="valid_date">有效期</string>
    <string name="via">通过</string>
    <string name="no_via">不通过</string>
    <string name="sample_book_list">样书清单</string>
    <string name="buy_book_list">赠书清单</string>
    <string name="real_name">真实姓名</string>
    <string name="sex">性别</string>
    <string name="birth_date">出生日期</string>
    <string name="contact_way">联系方式</string>
    <string name="mailbox">邮箱</string>
    <string name="location">所在地</string>
    <string name="school">学校</string>
    <string name="faculty">院系</string>
    <string name="teacher_job">职务</string>
    <string name="office_phone">办公电话</string>
    <string name="teaching_course">教授课程</string>
    <string name="in_deadline">期限内</string>
    <string name="expired">已到期</string>
    <string name="new_password">新密码</string>
    <string name="repeat_password">重复密码</string>
    <string name="please_input">请输入...</string>
    <string name="confirm">确认</string>
    <string name="details">详情</string>
    <string name="discover">发现</string>
    <string name="sex_1">男</string>
    <string name="sex_2">女</string>
    <string name="book_detail_title">图书详情</string>
    <string name="my_interest">我感兴趣的</string>
    <string name="give_book_manage">赠书管理</string>
    <string name="classify">分类</string>
    <string name="str_pay">支付</string>
    <string name="file_size">文件大小：</string>
    <string name="order_number">订单编号</string>
    <string name="transaction_number">交易号</string>
    <string name="pay_way">支付方式</string>
    <string name="transaction_amount">交易金额</string>
    <string name="str_download">下载</string>
    <string name="download_done">下载成功</string>
    <string name="sure_pay_amount">确认支付：</string>
    <string name="pay_success">支付成功</string>
    <string name="pay_fail">支付失败</string>
    <string name="pay_by_zfb">支付宝支付</string>
    <string name="pay_by_wechat">微信支付</string>
    <string name="delete_collect">移除收藏</string>
    <string name="user_state_0">正常用户</string>
    <string name="user_state_1">黑名单用户</string>
    <string name="please_input_content">请输入内容</string>
    <string name="apply_samplebook_count">申请样书统计</string>
    <string name="give_book_count">赠书统计</string>
    <string name="catalog_book">目录</string>
    <string name="change_password">修改密码</string>
    <string name="recharge_num">充值金额</string>
    <string name="kindly_reminder">温馨提示</string>
    <string name="recharge_now">立即充值</string>
    <string name="recharge_center">充值中心</string>
    <string name="recharge_str">充值</string>
    <string name="recharge_record">充值记录</string>
    <string name="pay_record">消费记录</string>
    <string name="pay_done">已完成</string>
    <string name="pay_undone">未完成</string>
    <string name="pay_record_all">全部</string>
    <string name="delete_order">删除订单</string>
    <string name="go_pay">去支付</string>
    <string name="teacher_str">教师</string>
    <string name="year_str">年</string>
    <string name="month_str">月</string>
    <string name="week_str">周</string>
    <string name="book_number">册\n数</string>
    <string name="book_number_str">册数</string>
    <string name="people_number">人\n数</string>
    <string name="people_number_str">人数</string>
    <string name="apply_limit">上\n限</string>
    <string name="apply_limit_str">申请上限</string>
    <string name="givebiik_tj_pbar_des">赠书上限%1$d本,还剩%2$d次机会</string>
    <string name="my_account">我的账户</string>
    <string name="please_pay">请支付</string>
    <string name="book_token_value">价格： %1$d CIP币</string>
    <string name="book_token_balance">余额： %1$d CIP币</string>
    <string name="go_recharge_str">去充值>></string>
    <string name="sure_pay">确定支付： %1$d CIP币</string>
    <string name="token_balance_noenough">余额不足</string>
    <string name="price_rmb">售价:%1$s 元</string>
    <string name="recharge_token">充值面值：%1$d CIP币</string>
    <string name="recharge_total">总计：￥%1$S 元</string>
    <string name="copyright_str">Copyright©2018 \n化学工业出版社,All Rights Reserved.</string>
    <string name="have_download">已下载</string>
    <string name="bookshelf_page">页数：%1$S 页</string>
    <string name="bookshelf_isbn">ISBN：%1$S </string>
    <string name="bookshelf_limit">截止时间：%1$S</string>
    <string name="save_modify">设置成功</string>
    <string name="binding_phone">绑定手机号</string>
    <string name="input_login_msg">请输入正确信息</string>
    <string name="send_success">发送成功</string>
    <string name="forget_password">忘记密码</string>
    <string name="login_register">登录/注册</string>
    <string name="tourist_login">游客登录</string>
    <string name="sure_btn">确定</string>
    <string name="cancle_btn">取消</string>
    <string name="please_setting">请设置教师信息</string>
    <string name="bookshelf_del_title">是否删除选中项，删除后无法找回，请慎重选择!</string>
    <string name="check_change"> ＞ </string>
    <string name="book_publish_time">出版时间：%1$S</string>
    <string name="no_edit_data">暂无可管理数据</string>
    <string name="oppinion_from">来自 %1$s </string>
    <string name="oppinion_to">发送给 %1$s </string>
    <string name="buy_success">购买成功</string>
    <string name="cip_hot_phone">010-19980232</string>
    <string name="save_change">保存</string>
    <string name="str_tos">服务条款</string>
</resources>
