<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical"
    android:focusable="true"
    android:focusableInTouchMode="true"
    android:padding="@dimen/margin_10dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="@dimen/margin_75dp"
                android:layout_height="wrap_content"
                android:text="@string/real_name"
                android:textColor="@color/text_main_6"
                android:textSize="@dimen/text_14sp" />

            <TextView
                android:id="@+id/tv_real_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/text_main_3"
                android:textSize="@dimen/text_14sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_5dp">

            <TextView
                android:layout_width="@dimen/margin_75dp"
                android:layout_height="wrap_content"
                android:text="@string/sex"
                android:textColor="@color/text_main_6"
                android:textSize="@dimen/text_14sp" />

            <TextView
                android:id="@+id/tv_sex"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/text_main_3"
                android:textSize="@dimen/text_14sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_5dp">

            <TextView
                android:layout_width="@dimen/margin_75dp"
                android:layout_height="wrap_content"
                android:text="@string/birth_date"
                android:textColor="@color/text_main_6"
                android:textSize="@dimen/text_14sp" />

            <TextView
                android:id="@+id/tv_birth_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/text_main_3"
                android:textSize="@dimen/text_14sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_5dp">

            <TextView
                android:layout_width="@dimen/margin_75dp"
                android:layout_height="wrap_content"
                android:text="@string/contact_way"
                android:textColor="@color/text_main_6"
                android:textSize="@dimen/text_14sp" />

            <TextView
                android:id="@+id/tv_contact_way"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/text_main_3"
                android:textSize="@dimen/text_14sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_5dp">

            <TextView
                android:layout_width="@dimen/margin_75dp"
                android:layout_height="wrap_content"
                android:text="@string/mailbox"
                android:textColor="@color/text_main_6"
                android:textSize="@dimen/text_14sp" />

            <TextView
                android:id="@+id/tv_mailbox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/text_main_3"
                android:textSize="@dimen/text_14sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_5dp">

            <TextView
                android:layout_width="@dimen/margin_75dp"
                android:layout_height="wrap_content"
                android:text="@string/location"
                android:textColor="@color/text_main_6"
                android:textSize="@dimen/text_14sp" />

            <TextView
                android:id="@+id/tv_location"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/text_main_3"
                android:textSize="@dimen/text_14sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_5dp">

            <TextView
                android:layout_width="@dimen/margin_75dp"
                android:layout_height="wrap_content"
                android:text="@string/school"
                android:textColor="@color/text_main_6"
                android:textSize="@dimen/text_14sp" />

            <EditText
                android:id="@+id/tv_school"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@null"
                android:hint="@string/please_setting"
                android:textColor="@color/text_main_3"
                android:textSize="@dimen/text_14sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_5dp">

            <TextView
                android:layout_width="@dimen/margin_75dp"
                android:layout_height="wrap_content"
                android:text="@string/faculty"
                android:textColor="@color/text_main_6"
                android:textSize="@dimen/text_14sp" />

            <EditText
                android:id="@+id/tv_faculty"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@null"
                android:hint="@string/please_setting"
                android:textColor="@color/text_main_3"
                android:textSize="@dimen/text_14sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_5dp">

            <TextView
                android:layout_width="@dimen/margin_75dp"
                android:layout_height="wrap_content"
                android:text="@string/teacher_job"
                android:textColor="@color/text_main_6"
                android:textSize="@dimen/text_14sp" />

            <TextView
                android:id="@+id/tv_teacher_job"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@null"
                android:textColor="@color/text_main_3"
                android:textSize="@dimen/text_14sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_5dp">

            <TextView
                android:layout_width="@dimen/margin_75dp"
                android:layout_height="wrap_content"
                android:text="@string/office_phone"
                android:textColor="@color/text_main_6"
                android:textSize="@dimen/text_14sp" />

            <TextView
                android:id="@+id/tv_office_phone"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/text_main_3"
                android:textSize="@dimen/text_14sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_5dp">

            <TextView
                android:layout_width="@dimen/margin_75dp"
                android:layout_height="wrap_content"
                android:text="@string/teaching_course"
                android:textColor="@color/text_main_6"
                android:textSize="@dimen/text_14sp" />

            <TextView
                android:id="@+id/tv_teaching_course"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/text_main_3"
                android:textSize="@dimen/text_14sp" />
        </LinearLayout>

        <TextView
            android:id="@+id/tv_save_modify"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_margin="@dimen/margin_10dp"
            android:background="@drawable/rounded_rectangle_gray"
            android:paddingBottom="@dimen/margin_5dp"
            android:paddingLeft="@dimen/margin_20dp"
            android:paddingRight="@dimen/margin_20dp"
            android:paddingTop="@dimen/margin_5dp"
            android:text="@string/save_change"
            android:textColor="@color/text_main_9"
            android:textSize="@dimen/text_14sp" />
    </LinearLayout>

</ScrollView>
