<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/app_bag"
    android:fitsSystemWindows="true"
    android:orientation="vertical"
    tools:context="com.tkbs.chem.press.activity.ChangePasswordActivity">

    <include layout="@layout/title_bar_normal" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_1dp"
        android:background="@color/white"
        android:padding="@dimen/margin_10dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/login_password"
            android:textColor="@color/text_main_3"
            android:textSize="@dimen/text_15sp" />

        <EditText
            android:id="@+id/tv_longin_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@null"
            android:gravity="end"
            android:hint="@string/please_input" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_1dp"
        android:background="@color/white"
        android:padding="@dimen/margin_10dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/new_password"
            android:textColor="@color/text_main_3"
            android:textSize="@dimen/text_15sp" />

        <EditText
            android:id="@+id/tv_new_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@null"
            android:gravity="end"
            android:hint="@string/please_input" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_1dp"
        android:background="@color/white"
        android:padding="@dimen/margin_10dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/repeat_password"
            android:textColor="@color/text_main_3"
            android:textSize="@dimen/text_15sp" />

        <EditText
            android:id="@+id/tv_repeat_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@null"
            android:gravity="end"
            android:hint="@string/please_input" />
    </LinearLayout>

    <Button
        android:id="@+id/btn_confirm"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/margin_30dp"
        android:layout_marginLeft="@dimen/margin_15dp"
        android:layout_marginRight="@dimen/margin_15dp"
        android:layout_marginTop="@dimen/margin_30dp"
        android:background="@drawable/btn_logout"
        android:gravity="center"
        android:text="@string/confirm"
        android:textColor="@color/bg_main_white"
        android:textSize="@dimen/text_18sp" />
</LinearLayout>
